# GranSabio_LLM

./: .coveragerc  .env.template  .gitignore  .mcp.json.example  CLAUDE.md  README.md  ai_service.py  analysis_router.py  arbiter.py  attachments_router.py  auto_qa_planner.py  config.py  consensus_engine.py  content_editor.py  deal_breaker_tracker.py  debug_logger.py  deterministic_validation.py  example_request.py  feedback_memory.py  file_logger.py  gran_sabio.py  gran_sabio_supervisor.py  install_mcp.bat  install_mcp.sh  json_field_utils.py  json_utils.py  llm_accent_prompts.py  llm_routing.default.json  llm_routing.py  logging_utils.py  main.py  model_aliasing.py  model_capability_registry.py  model_specs.json  models.py  phrase_frequency_config.py  preflight_validator.py  provider_capabilities.py  provider_errors.py  provider_health.py  (+20 more)
ai_runtime/: __init__.py  capabilities.py  parameters.py  schemas.py  usage.py  vision.py
client/: README.md  __init__.py  _common.py  async_client.py  pyproject.toml  sync_client.py
core/: __init__.py  analytics_routes.py  app_state.py  cancellation.py  console_routes.py  debug_routes.py  feedback_formatter.py  generation_processor.py  generation_routes.py  interfaces.py  monitor_routes.py  openrouter_routes.py  prompt_templates.py  qa_decision_engine.py  security.py  streaming_routes.py
demos/: 01_simple_article.py  02_linkedin_post.py  03_youtube_script_generator.py  04_text_quality_analyzer.py  05_json_structured_output.py  06_content_with_sources.py  07_creative_story.py  08_parallel_generation.py  09_preflight_validation.py  (+4 more)
(+257 files in other folders)
